# AzurLaneSkinsList

./: pyproject.toml  requirements.txt  skins.py  skins.txt
.github/workflows/: update_skin.yml
